feat(migration)!: finalize Kora 2 migration
- migrate builds to kora-bom and JUnit 6.1.3
- remove suspend HTTP, repository, and server APIs
- remove obsolete coroutine dependencies
- add OpenRewrite and Python migration rules
- document Java Structured Concurrency migration

BREAKING CHANGE: Kotlin framework contracts are now synchronous;
structured concurrency requires the latest GA JDK preview API.